--- a/index.css
+++ b/index.css
@@ -39,15 +39,22 @@ nav {
   padding: 1rem 2rem 0 1rem;
 }
 
+nav .burger i {
+  font-size: 1.4rem;
+  color: #252525;
+}
+
 nav .navlinks {
   display: none;
   text-transform: uppercase;
   font-weight: 500;
   opacity: 0.8;
+  letter-spacing: 0.15rem;
 }
 
-nav i {
-  color: #292929;
+nav .navlinks a {
+  color: #0c0c0c;
+  text-decoration: none;
 }
 
 nav img {
@@ -70,7 +77,7 @@ nav img {
 }
 
 .homepage .about .aboutbox {
-  width: 80%;
+  width: 75%;
   height: 28vh;
   position: absolute;
   background-color: #67362D;
@@ -79,7 +86,7 @@ nav img {
 }
 
 .homepage .about .imageabout {
-  width: 80vw;
+  width: 75vw;
   height: 27.7vh;
   margin: 8% 10.8%;
   cursor: pointer;
@@ -233,7 +240,6 @@ nav img {
 
 .homepage .sectionsSection {
   text-align: center;
-  margin: 3% 5%;
 }
 
 .homepage .sectionsSection .section .lifestyle, .homepage .sectionsSection .section .recipies {
@@ -409,7 +415,7 @@ nav img {
   .homepage .sectionsSection .section .subSections .subSection .postbox {
     width: 77%;
     height: 30vh;
-    left: 2.5rem;
+    left: 3rem;
     background-color: #947765;
     position: absolute;
     z-index: -2;
@@ -430,7 +436,7 @@ nav img {
     height: 65vh;
   }
   .homepage .about .aboutbox {
-    width: 80%;
+    width: 75%;
     height: 35vh;
     position: absolute;
     background-color: #67362D;
@@ -467,14 +473,11 @@ nav img {
     left: 7%;
     width: 39%;
   }
-  .homepage .sectionsSection .section {
-    margin: 0 8%;
-  }
   .homepage .sectionsSection .section .subSections .subSection img {
     margin-top: 1rem;
   }
   .homepage .sectionsSection .section .subSections .subSection .postbox {
-    left: 7vw;
+    left: 9vw;
   }
 }
 
@@ -657,35 +660,11 @@ nav img {
 
 @media (min-width: 900px) {
   nav {
-    height: 10vh;
-  }
-  nav .navlinks {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 50%;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-  }
-  nav .burger {
-    display: none;
+    height: 8vh;
+    padding: 1rem 4rem 0 1rem;
   }
   nav img {
     width: 20vw;
-  }
-  .homepage .hero .small {
-    display: none;
-  }
-  .homepage .hero .medium {
-    display: none;
-  }
-  .homepage .hero .large {
-    width: 100%;
-    height: 100vh;
-    -o-object-fit: cover;
-       object-fit: cover;
-    display: block;
   }
   .homepage .about .aboutcontent h3 {
     margin-top: 9rem;
@@ -694,7 +673,7 @@ nav img {
     margin: 0.8rem 6rem;
   }
   .homepage .blogRecent {
-    margin: 5rem 4rem;
+    margin: 3rem 4rem;
   }
   .homepage .blogRecent .posts .post .postbox {
     height: 35vh;
@@ -704,9 +683,6 @@ nav img {
   }
   .homepage .blogRecent .blogfull {
     width: 12vw;
-  }
-  .homepage .sectionsSection {
-    margin: 1rem 4rem;
   }
   .homepage .sectionsSection .section .subSections .subSection img {
     height: 35vh;
@@ -738,6 +714,37 @@ nav img {
 }
 
 @media (min-width: 1020px) {
+  nav {
+    height: 10vh;
+  }
+  nav .navlinks {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 53%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  nav .burger {
+    display: none;
+  }
+  nav img {
+    width: 20vw;
+  }
+  .homepage .hero .small {
+    display: none;
+  }
+  .homepage .hero .medium {
+    display: none;
+  }
+  .homepage .hero .large {
+    width: 100%;
+    height: 100vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+    display: block;
+  }
   .homepage .blogRecent .posts .post .postbox {
     height: 40vh;
     left: 4vw;
@@ -772,7 +779,7 @@ nav img {
   }
   .homepage .sectionsSection .section .subSections .subSection .postbox {
     height: 40vh;
-    left: 4vw;
+    left: 5vw;
   }
   .homepage .sectionsSection .section .lifestylefull, .homepage .sectionsSection .section .recipiesfull {
     margin-right: 2rem;
@@ -784,7 +791,7 @@ nav img {
     padding: 1rem 8rem 0 1rem;
   }
   nav .navlinks {
-    width: 40%;
+    width: 47%;
   }
   .homepage .about .aboutcontent img {
     left: -7px;
@@ -812,7 +819,7 @@ nav img {
   }
   .homepage .sectionsSection .section .subSections .subSection .postbox {
     height: 53vh;
-    left: 4vw;
+    left: 5vw;
   }
   .homepage .sectionsSection .section .lifestylefull, .homepage .sectionsSection .section .recipiesfull {
     margin-right: 2rem;
@@ -851,6 +858,9 @@ nav img {
   .homepage .about .aboutcontent img {
     left: -1px;
     top: -5vh;
+  }
+  .homepage .about .aboutcontent h3 {
+    font-size: 1.5rem;
   }
 }
 /*# sourceMappingURL=index.css.map */
