--- a/index.css
+++ b/index.css
@@ -231,8 +231,7 @@ nav img {
   background-color: white;
   padding: 0.5rem 0.9rem;
   border: none;
-  color: #5a757ccb;
-  border-radius: 5px;
+  color: #5a757c;
 }
 
 .homepage .subscribeSection img {
@@ -243,6 +242,7 @@ nav img {
 }
 
 .homepage .sectionsSection {
+  display: none;
   text-align: center;
 }
 
@@ -295,7 +295,7 @@ nav img {
 
 .homepage .favBrands {
   text-align: center;
-  margin: 0 10%;
+  margin: 8% 10% 0%;
 }
 
 .homepage .favBrands .favBrands {
@@ -591,6 +591,9 @@ nav img {
     left: 6%;
     width: 33%;
   }
+  .homepage .sectionsSection {
+    display: block;
+  }
   .homepage .sectionsSection .section {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -774,16 +777,16 @@ nav img {
             align-items: center;
   }
   .homepage .subscribeSection .subscribeSquiggle {
-    width: 15vw;
-    height: 100%;
-    left: 87%;
+    width: 30vw;
+    height: 110%;
+    left: 81%;
   }
   .homepage .subscribeSection .subscribePhotoSection {
     display: block;
   }
   .homepage .subscribeSection .subscribePhotoSection img {
     margin-top: 2.9rem;
-    margin-left: 2rem;
+    margin-left: 5rem;
     width: 20%;
     height: 75%;
     -o-object-fit: cover;
@@ -795,25 +798,25 @@ nav img {
     width: 20%;
     height: 75%;
     position: absolute;
-    left: 7.5%;
+    left: 12%;
     top: 11%;
   }
   .homepage .subscribeSection .subscribeContent {
     margin-top: 4rem;
-    width: 80%;
+    width: 65%;
   }
   .homepage .subscribeSection .subscribeContent p {
     font-size: 1.2rem;
   }
   .homepage .subscribeSection .subscribeContent input[type='text'] {
-    width: 35%;
+    width: 44%;
   }
   .homepage .subscribeSection .subscribeContent button {
     padding: 0.5rem 1.3rem;
   }
   .homepage .subscribeSection .subscribeContent img {
     top: -1%;
-    left: 30%;
+    left: 39%;
     width: 24%;
   }
   .homepage .sectionsSection .section .subSections .subSection img {
@@ -857,14 +860,17 @@ nav img {
   }
   .homepage .subscribeSection .subscribePhotoSection img {
     margin-top: 2.9rem;
-    margin-left: 2rem;
+    margin-left: 5rem;
   }
   .homepage .subscribeSection .subscribePhotoSection .subscribeBox {
-    left: 7%;
+    left: 10.5%;
     top: 10%;
   }
   .homepage .subscribeSection .subscribeContent img {
     width: 22%;
+  }
+  .homepage .sectionsSection .section {
+    margin-top: 7rem;
   }
   .homepage .sectionsSection .section .subSections .subSection img {
     margin-top: 1rem;
