--- a/index.css
+++ b/index.css
@@ -61,7 +61,7 @@ nav img {
   width: 35vw;
 }
 
-.homepage .hero .small {
+.homepage .hero .small, .homepage .hero .test {
   width: 100vw;
   height: 45vh;
   -o-object-fit: cover;
@@ -216,7 +216,24 @@ nav img {
   font-size: 0.8rem;
 }
 
-.homepage .subscribeSection .subscribeContent input[type='text'] {
+.homepage .subscribeSection .subscribeContent form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+}
+
+.homepage .subscribeSection .subscribeContent form input[type='text'] {
   margin: 0.5rem 0 1rem;
   background-color: transparent;
   border: white 3px solid;
@@ -227,7 +244,7 @@ nav img {
   outline: none;
 }
 
-.homepage .subscribeSection .subscribeContent button {
+.homepage .subscribeSection .subscribeContent form button {
   background-color: white;
   padding: 0.5rem 0.9rem;
   border: none;
@@ -381,7 +398,7 @@ nav img {
   .homepage .hero .small {
     display: none;
   }
-  .homepage .hero .medium {
+  .homepage .hero .medium, .homepage .hero .test {
     width: 100%;
     height: 55vh;
     -o-object-fit: cover;
@@ -439,7 +456,7 @@ nav img {
   nav img {
     width: 30vw;
   }
-  .homepage .hero .medium {
+  .homepage .hero .medium, .homepage .hero .test {
     height: 65vh;
   }
   .homepage .about .aboutbox {
@@ -486,7 +503,7 @@ nav img {
 }
 
 @media (min-width: 700px) {
-  .homepage .hero .medium {
+  .homepage .hero .medium, .homepage .hero .test {
     height: 80vh;
   }
   .homepage .about {
@@ -748,7 +765,7 @@ nav img {
   .homepage .hero .medium {
     display: none;
   }
-  .homepage .hero .large {
+  .homepage .hero .large, .homepage .hero .test {
     width: 100%;
     height: 100vh;
     -o-object-fit: cover;
@@ -867,7 +884,8 @@ nav img {
     top: 10%;
   }
   .homepage .subscribeSection .subscribeContent img {
-    width: 22%;
+    width: 19%;
+    left: 37%;
   }
   .homepage .sectionsSection .section {
     margin-top: 7rem;
