--- a/index.scss
+++ b/index.scss
@@ -53,6 +53,7 @@ nav{
             width: 100vw;
             height: 45vh;
             object-fit: cover;
+            object-position: 0px;
         }
         .medium{
             display: none;
