--- a/index.css
+++ b/index.css
@@ -66,6 +66,8 @@ nav img {
   height: 45vh;
   -o-object-fit: cover;
      object-fit: cover;
+  -o-object-position: 0px;
+     object-position: 0px;
 }
 
 .homepage .hero .medium {
