--- a/contact.css
+++ b/contact.css
@@ -1,1 +1,49 @@
-/* No CSS *//*# sourceMappingURL=contact.css.map */
+@media (min-width: 600px) {
+  nav {
+    height: 8vh;
+  }
+  nav img {
+    width: 30vw;
+  }
+}
+
+@media (min-width: 900px) {
+  nav {
+    height: 8vh;
+    padding: 1rem 4rem 0 1rem;
+  }
+  nav img {
+    width: 20vw;
+  }
+}
+
+@media (min-width: 1020px) {
+  nav {
+    height: 10vh;
+  }
+  nav .navlinks {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 53%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  nav .burger {
+    display: none;
+  }
+  nav img {
+    width: 20vw;
+  }
+}
+
+@media (min-width: 1200px) {
+  nav {
+    padding: 1rem 8rem 0 1rem;
+  }
+  nav .navlinks {
+    width: 47%;
+  }
+}
+/*# sourceMappingURL=contact.css.map */
