--- a/index.css
+++ b/index.css
@@ -61,21 +61,13 @@ nav img {
   width: 35vw;
 }
 
-.homepage .hero .small, .homepage .hero .test {
+.homepage .hero .test {
   width: 100vw;
   height: 45vh;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: 0px;
      object-position: 0px;
-}
-
-.homepage .hero .medium {
-  display: none;
-}
-
-.homepage .hero .large {
-  display: none;
 }
 
 .homepage .about .aboutbox {
@@ -317,10 +309,10 @@ nav img {
   margin: 8% 10% 0%;
 }
 
-.homepage .favBrands .favBrands {
-  width: 50%;
-  cursor: pointer;
+.homepage .favBrands .favBrandsTitle {
+  width: 50vw;
   margin-bottom: 1rem;
+  cursor: pointer;
 }
 
 .homepage .favBrands .logos {
@@ -397,18 +389,12 @@ nav img {
 }
 
 @media (min-width: 400px) {
-  .homepage .hero .small {
-    display: none;
-  }
-  .homepage .hero .medium, .homepage .hero .test {
+  .homepage .hero .test {
     width: 100%;
     height: 55vh;
     -o-object-fit: cover;
        object-fit: cover;
     display: block;
-  }
-  .homepage .hero .large {
-    display: none;
   }
   .homepage .about .aboutcontent h3 {
     margin-top: 5rem;
@@ -458,7 +444,7 @@ nav img {
   nav img {
     width: 30vw;
   }
-  .homepage .hero .medium, .homepage .hero .test {
+  .homepage .hero .test {
     height: 65vh;
   }
   .homepage .about .aboutbox {
@@ -505,7 +491,7 @@ nav img {
 }
 
 @media (min-width: 700px) {
-  .homepage .hero .medium, .homepage .hero .test {
+  .homepage .hero .test {
     height: 80vh;
   }
   .homepage .about {
@@ -761,13 +747,7 @@ nav img {
   nav img {
     width: 20vw;
   }
-  .homepage .hero .small {
-    display: none;
-  }
-  .homepage .hero .medium {
-    display: none;
-  }
-  .homepage .hero .large, .homepage .hero .test {
+  .homepage .hero .test {
     width: 100%;
     height: 100vh;
     -o-object-fit: cover;
