--- a/index.scss
+++ b/index.scss
@@ -49,17 +49,11 @@ nav{
 
 .homepage{
     .hero{
-        .small, .test{
+        .test{
             width: 100vw;
             height: 45vh;
             object-fit: cover;
             object-position: 0px;
-        }
-        .medium{
-            display: none;
-        }
-        .large{
-            display: none;
         }
     }
     .about{
@@ -249,11 +243,12 @@ nav{
     .favBrands{
         text-align: center;
         margin: 8% 10% 0%;
-        .favBrands{
-                width: 50%;
-                cursor: pointer;
-                margin-bottom: 1rem;
+        .favBrandsTitle{
+            width: 50vw;
+            margin-bottom: 1rem;
+            cursor: pointer;
         }
+
         .logos{
             display: flex;
             justify-content: space-between;
@@ -320,17 +315,11 @@ nav{
 @media (min-width: 400px){
     .homepage{
         .hero{
-            .small{
-                display: none;
-            }
-            .medium, .test{
+             .test{
                 width: 100%;
                 height: 55vh;
                 object-fit: cover;
                 display: block;
-            }
-            .large{
-                display: none;
             }
         }
         
@@ -413,7 +402,7 @@ nav{
     }
     .homepage{
         .hero{
-            .medium, .test{
+            .test{
                 height: 65vh;
             }
         }
@@ -492,7 +481,7 @@ nav{
 @media (min-width: 700px){
     .homepage{
         .hero{
-            .medium, .test{
+            .test{
                 height: 80vh;
             }
         }
@@ -771,13 +760,7 @@ nav{
     }
     .homepage{
         .hero{
-            .small{
-                display: none;
-            }
-            .medium{
-                display: none;
-            }
-            .large, .test{
+            .test{
                 width: 100%;
                 height: 100vh;
                 object-fit: cover;
