--- a/about.css
+++ b/about.css
@@ -1,9 +1,438 @@
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  overflow-x: hidden;
+}
+
+h2, h3, h4, h5 {
+  font-family: 'Jost', sans-serif;
+  font-weight: 600;
+}
+
+p {
+  font-family: 'Lato', sans-serif;
+  font-size: 0.9rem;
+  line-height: 1.5rem;
+}
+
+li {
+  font-family: 'Jost', sans-serif;
+}
+
+nav {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 6vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+  padding: 1rem 2rem 0 1rem;
+}
+
+nav .burger i {
+  font-size: 1.4rem;
+  color: #252525;
+}
+
+nav .navlinks {
+  display: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  opacity: 0.8;
+  letter-spacing: 0.10rem;
+}
+
+nav .navlinks a {
+  color: #0c0c0c;
+  text-decoration: none;
+}
+
+nav img {
+  width: 35vw;
+}
+
+.aboutPage {
+  margin-top: 8vh;
+}
+
+.aboutPage .aboutHero {
+  height: 20vh;
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+
+.aboutPage .aboutHero img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0 -100px;
+     object-position: 0 -100px;
+}
+
+.aboutPage .aboutHero h2 {
+  position: absolute;
+  top: 40%;
+  left: 7%;
+  color: white;
+  letter-spacing: 0.12rem;
+}
+
+.aboutPage .aboutSection {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.aboutPage .aboutSection .section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.aboutPage .aboutSection .section .aboutContent {
+  text-align: center;
+  margin: 2% 10% 8%;
+  position: relative;
+}
+
+.aboutPage .aboutSection .section .aboutContent img {
+  position: absolute;
+  left: 10px;
+  top: 0vh;
+  width: 35vw;
+}
+
+.aboutPage .aboutSection .section .aboutContent h3 {
+  margin-bottom: 0.8rem;
+  margin-top: 5rem;
+}
+
+.aboutPage .aboutSection .section .photo {
+  overflow: hidden;
+  width: 100vw;
+  height: 40vw;
+  position: relative;
+}
+
+.aboutPage .aboutSection .section .photo img {
+  width: 100%;
+  height: 95%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 3;
+}
+
+.aboutPage .aboutSection .section .photo .smile {
+  -o-object-position: 0 -100px;
+     object-position: 0 -100px;
+}
+
+.aboutPage .aboutSection .section .photo .imageBox {
+  background-color: #947765;
+  width: 100vw;
+  height: 40vw;
+  position: absolute;
+  top: 4%;
+  left: 0;
+  z-index: -1;
+}
+
+.aboutPage .aboutSection .second {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.aboutPage .aboutSection .second .faq {
+  text-align: center;
+  margin: 2% 10% 8%;
+  position: relative;
+}
+
+.aboutPage .aboutSection .second .faq img {
+  position: absolute;
+  left: 10px;
+  top: 0vh;
+  width: 35vw;
+}
+
+.aboutPage .aboutSection .second .faq span {
+  font-weight: 600;
+}
+
+.aboutPage .aboutSection .second .faq h3 {
+  margin-bottom: 0.8rem;
+  margin-top: 1.5rem;
+}
+
+.aboutPage .aboutSection .second .photo {
+  overflow: hidden;
+  width: 100vw;
+  height: 40vw;
+  position: relative;
+}
+
+.aboutPage .aboutSection .second .photo img {
+  width: 100%;
+  height: 95%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 3;
+}
+
+.aboutPage .aboutSection .second .photo .smile {
+  -o-object-position: 0 -100px;
+     object-position: 0 -100px;
+}
+
+.aboutPage .aboutSection .second .photo .imageBox {
+  background-color: #947765;
+  width: 100vw;
+  height: 40vw;
+  position: absolute;
+  top: 4%;
+  left: 0;
+  z-index: -1;
+}
+
+.wave {
+  width: 110%;
+  height: 70px;
+  margin-top: 3%;
+  display: none;
+}
+
+footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 10%;
+  height: 15vh;
+}
+
+footer .vj {
+  width: 50px;
+}
+
+footer .links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+footer .links ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 0.7rem;
+}
+
+footer .links ul li {
+  font-size: 0.85rem;
+  margin-right: 1rem;
+  opacity: 0.7;
+}
+
 @media (min-width: 600px) {
   nav {
     height: 8vh;
   }
   nav img {
     width: 30vw;
+  }
+  .aboutPage {
+    margin-top: 9vh;
+  }
+  .aboutPage .aboutHero img {
+    -o-object-position: 0 -150px;
+       object-position: 0 -150px;
+  }
+  .aboutPage .aboutHero h2 {
+    font-size: 2rem;
+    letter-spacing: 0.14rem;
+  }
+  .aboutPage .aboutSection .section {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .aboutPage .aboutSection .section .aboutContent {
+    width: 50vw;
+    margin: 2% 5%;
+  }
+  .aboutPage .aboutSection .section .aboutContent img {
+    width: 25vw;
+    top: -2vh;
+  }
+  .aboutPage .aboutSection .section .aboutContent h3 {
+    margin-top: 5rem;
+  }
+  .aboutPage .aboutSection .section .photo {
+    margin-top: 4%;
+    width: 50vw;
+    height: 50vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .aboutPage .aboutSection .section .photo img {
+    width: 80%;
+    height: 34vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+    z-index: 3;
+    margin-top: 5vh;
+  }
+  .aboutPage .aboutSection .section .photo .imageBox {
+    width: 36vw;
+    height: 68%;
+    top: 12vh;
+    left: 0.7rem;
+    z-index: -1;
+  }
+  .aboutPage .aboutSection .second {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  .aboutPage .aboutSection .second .photo {
+    margin-top: 4%;
+    width: 50vw;
+    height: 50vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .aboutPage .aboutSection .second .photo img {
+    width: 80%;
+    height: 34vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+    z-index: 3;
+    margin-top: 5vh;
+    margin-left: 2rem;
+  }
+  .aboutPage .aboutSection .second .photo .smile {
+    -o-object-position: 0 -30px;
+       object-position: 0 -30px;
+  }
+  .aboutPage .aboutSection .second .photo .imageBox {
+    width: 37.5vw;
+    height: 67%;
+    top: 6.8vh;
+    left: 2.5rem;
+    z-index: -1;
+  }
+  .aboutPage .aboutSection .second .faq {
+    width: 50vw;
+    margin: 2% 5% 2% 2%;
+  }
+  .aboutPage .aboutSection .second .faq h3 {
+    margin-top: 2rem;
   }
 }
 
@@ -14,6 +443,28 @@
   }
   nav img {
     width: 20vw;
+  }
+  .aboutPage .aboutHero img {
+    -o-object-position: 0 -250px;
+       object-position: 0 -250px;
+  }
+  .aboutPage .aboutSection .section .aboutContent img {
+    width: 20vw;
+  }
+  .aboutPage .aboutSection .section .aboutContent h3 {
+    font-size: 1.5rem;
+  }
+  .aboutPage .aboutSection .section .aboutContent p {
+    margin: 0 3rem;
+  }
+  .aboutPage .aboutSection .second .photo img {
+    margin-left: 5rem;
+  }
+  .aboutPage .aboutSection .second .photo .imageBox {
+    width: 36.5vw;
+    height: 34vh;
+    top: 7vh;
+    left: 6.5rem;
   }
 }
 
@@ -36,6 +487,46 @@
   nav img {
     width: 20vw;
   }
+  .aboutPage {
+    margin-top: 12vh;
+  }
+  .aboutPage .aboutHero {
+    height: 25vh;
+  }
+  .aboutPage .aboutHero img {
+    -o-object-position: 0 -260px;
+       object-position: 0 -260px;
+  }
+  .aboutPage .aboutHero h2 {
+    font-size: 2.1rem;
+    letter-spacing: 0.14rem;
+  }
+  .aboutPage .aboutSection .section .aboutContent img {
+    width: 18vw;
+  }
+  .aboutPage .aboutSection .section .photo img {
+    width: 80%;
+    height: 40vh;
+    margin-top: 0%;
+  }
+  .aboutPage .aboutSection .section .photo .imageBox {
+    width: 36.5vw;
+    height: 38vh;
+    top: 9vh;
+  }
+  .aboutPage .aboutSection .second .faq h3 {
+    font-size: 1.5rem;
+  }
+  .aboutPage .aboutSection .second .photo img {
+    width: 80%;
+    height: 40vh;
+    margin-top: 0%;
+  }
+  .aboutPage .aboutSection .second .photo .imageBox {
+    width: 36.5vw;
+    height: 38vh;
+    top: 4vh;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -44,6 +535,35 @@
   }
   nav .navlinks {
     width: 47%;
+  }
+  .aboutPage .aboutHero img {
+    -o-object-position: 0 -350px;
+       object-position: 0 -350px;
+  }
+  .aboutPage .aboutSection .section .aboutContent img {
+    width: 16vw;
+    top: -3vh;
+    left: 2vw;
+  }
+  .aboutPage .aboutSection .section .photo img {
+    width: 80%;
+    height: 43vh;
+    margin-top: 0%;
+  }
+  .aboutPage .aboutSection .section .photo .imageBox {
+    width: 36.5vw;
+    height: 40vh;
+    top: 9vh;
+  }
+  .aboutPage .aboutSection .second .photo img {
+    width: 80%;
+    height: 43vh;
+    margin-top: 0%;
+  }
+  .aboutPage .aboutSection .second .photo .imageBox {
+    width: 36.5vw;
+    height: 40vh;
+    top: 5vh;
   }
 }
 /*# sourceMappingURL=about.css.map */
