--- a/about.scss
+++ b/about.scss
@@ -1,8 +1,313 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
+h2,h3,h4,h5{
+    font-family: 'Jost', sans-serif;
+    font-weight: 600;
+}
+p{
+    font-family: 'Lato', sans-serif;
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+}
+li{
+    font-family: 'Jost', sans-serif;
+}
+nav{
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height:6vh;
+    object-fit: cover;
+    padding: 1rem 2rem 0 1rem;
+    .burger{
+        i{
+            font-size: 1.4rem;
+            color: rgb(37, 37, 37);
+        }
+    }
+    .navlinks{
+        display: none;
+        text-transform: uppercase;
+        font-weight: 500;
+        opacity: 0.8;
+        letter-spacing: 0.10rem;
+        a{
+            color:rgb(12, 12, 12);
+            text-decoration: none;
+        }
+    }
+    img{
+        width: 35vw;
+    }
+}
+
+.aboutPage{
+    margin-top: 8vh;
+
+    .aboutHero{
+        height: 20vh;
+        position: relative;
+        width: 100%;
+        overflow: hidden;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: 0 -100px;
+        }
+        h2{
+            position: absolute;
+            top:40%;
+            left:7%;
+            color: white;
+            letter-spacing: 0.12rem;
+        }
+    }
+    
+    .aboutSection{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        .section{        
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            .aboutContent{
+                text-align: center;
+                margin: 2% 10% 8%;
+                position: relative;
+                img{
+                    position: absolute;
+                    left:10px;
+                    top: 0vh;
+                    width: 35vw;
+                }
+                h3{
+                    margin-bottom: 0.8rem;
+                    margin-top: 5rem;
+                }
+            }
+            .photo{
+                overflow: hidden;
+                width: 100vw;
+                height: 40vw;
+                position: relative;
+                img{
+                    width: 100%;
+                    height: 95%;
+                    object-fit: cover;
+                    z-index: 3;
+                }
+                .smile{
+                    object-position: 0 -100px;
+                }
+                .imageBox{
+                    background-color: #947765;
+                    width: 100vw;
+                    height: 40vw;
+                    position: absolute;
+                    top:4%;
+                    left:0;
+                    z-index: -1;
+                }
+            }
+        }
+        
+        .second{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            .faq{
+                text-align: center;
+                margin: 2% 10% 8%;
+                position: relative;
+                img{
+                    position: absolute;
+                    left:10px;
+                    top: 0vh;
+                    width: 35vw;
+                }
+                span{
+                    font-weight: 600;
+                }
+                h3{
+                    margin-bottom: 0.8rem;
+                    margin-top: 1.5rem;
+                }
+            }
+            .photo{
+                overflow: hidden;
+                width: 100vw;
+                height: 40vw;
+                position: relative;
+                img{
+                    width: 100%;
+                    height: 95%;
+                    object-fit: cover;
+                    z-index: 3;
+                }
+                .smile{
+                    object-position: 0 -100px;
+                }
+                .imageBox{
+                    background-color: #947765;
+                    width: 100vw;
+                    height: 40vw;
+                    position: absolute;
+                    top:4%;
+                    left:0;
+                    z-index: -1;
+                }
+            }
+        }
+    }
+}
+
+.wave{
+    width: 110%;
+    height: 70px;
+    margin-top: 3%;
+    display: none;
+}
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10%;
+    height: 15vh;
+    .vj{
+        width: 50px;
+    }
+
+    .links{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+        ul{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 0.7rem;
+            li{
+                font-size: 0.85rem;
+                margin-right:1rem;
+                opacity: 0.7;
+            }
+        }
+    }
+}
+
 @media (min-width: 600px){
     nav{
         height:8vh;
         img{
             width: 30vw;
+        }
+    }
+    .aboutPage{
+        margin-top: 9vh;
+        .aboutHero{
+            img{
+                object-position: 0 -150px;
+            }
+            h2{
+                font-size: 2rem;
+                letter-spacing: 0.14rem;
+            }
+        }
+        .aboutSection{
+            .section{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: row;
+                
+                .aboutContent{
+                    width: 50vw;
+                    margin: 2% 5%;
+                    img{
+                        width: 25vw;
+                        top: -2vh;
+                    }
+                    h3{
+                        margin-top: 5rem;
+                    }
+                }
+                .photo{
+                    margin-top: 4%;
+                    width: 50vw;
+                    height: 50vh;
+                    display: flex;
+                    justify-content: center;
+                    align-items: flex-start;
+                    flex-direction: column;
+                    img{
+                        width: 80%;
+                        height: 34vh;
+                        object-fit: cover;
+                        z-index: 3;
+                        margin-top: 5vh;
+                    }
+                    .imageBox{
+                        width: 36vw;
+                        height: 68%;
+                        top:12vh;
+                        left:0.7rem;
+                        z-index: -1;
+                    }
+                }
+            }
+            .second{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: row-reverse;
+                .photo{
+                    margin-top: 4%;
+                    width: 50vw;
+                    height: 50vh;
+                    display: flex;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    flex-direction: column;
+                    img{
+                        width: 80%;
+                        height: 34vh;
+                        object-fit: cover;
+                        z-index: 3;
+                        margin-top: 5vh;
+                        margin-left: 2rem;
+                    }
+                    .smile{
+                        object-position: 0 -30px;
+                    }
+                    .imageBox{
+                        width: 37.5vw;
+                        height: 67%;
+                        top:6.8vh;
+                        left:2.5rem;
+                        z-index: -1;
+                    }
+                }
+                .faq{
+                    width: 50vw;
+                    margin: 2% 5% 2% 2%;
+                    h3{
+                        margin-top: 2rem;
+                    }
+                }
+            }
         }
     }
 }
@@ -13,6 +318,41 @@
         padding: 1rem 4rem 0 1rem;
         img{
             width: 20vw;
+        }
+    }
+    .aboutPage{
+        .aboutHero{
+            img{
+                object-position: 0 -250px;
+            }
+        }
+        .aboutSection{
+            .section{
+                .aboutContent{
+                    img{
+                        width: 20vw;
+                    }
+                    h3{
+                        font-size: 1.5rem;
+                    }
+                    p{
+                        margin: 0 3rem;
+                    }
+                }
+            }
+            .second{
+                .photo{
+                    img{
+                        margin-left:5rem;
+                    }
+                    .imageBox{
+                        width: 36.5vw;
+                        height: 34vh;
+                        top:7vh;
+                        left:6.5rem;
+                    }
+                }
+            }
         }
     }
 }
@@ -32,6 +372,59 @@
             width: 20vw;
         }
     }
+    .aboutPage{
+        margin-top: 12vh;
+        .aboutHero{
+            height: 25vh;
+            img{
+                object-position: 0 -260px;
+            }
+            h2{
+                font-size: 2.1rem;
+                letter-spacing: 0.14rem;
+            }
+        }
+        .aboutSection{
+            .section{
+                .aboutContent{
+                    img{
+                        width: 18vw;
+                    }
+                }
+                .photo{
+                    img{
+                        width: 80%;
+                        height: 40vh;
+                        margin-top: 0%;
+                    }
+                    .imageBox{
+                        width: 36.5vw;
+                        height: 38vh;
+                        top:9vh;
+                    }
+                }
+            }
+            .second{
+                .faq{
+                    h3{
+                        font-size: 1.5rem;
+                    }
+                }
+                .photo{
+                    img{
+                        width: 80%;
+                        height: 40vh;
+                        margin-top: 0%;
+                    }
+                    .imageBox{
+                        width: 36.5vw;
+                        height: 38vh;
+                        top:4vh;
+                    }
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 1200px){
@@ -39,6 +432,50 @@
         padding: 1rem 8rem 0 1rem;
         .navlinks{
             width: 47%;
+        }
+    }
+    .aboutPage{
+        .aboutHero{
+            img{
+                object-position: 0 -350px;
+            }
+        }
+        .aboutSection{
+            .section{
+                .aboutContent{
+                    img{
+                        width: 16vw;
+                        top: -3vh;
+                        left: 2vw;
+                    }
+                }
+                .photo{
+                    img{
+                        width: 80%;
+                        height: 43vh;
+                        margin-top: 0%;
+                    }
+                    .imageBox{
+                        width: 36.5vw;
+                        height: 40vh;
+                        top:9vh;
+                    }
+                }
+            }
+            .second{
+                .photo{
+                    img{
+                        width: 80%;
+                        height: 43vh;
+                        margin-top: 0%;
+                    }
+                    .imageBox{
+                        width: 36.5vw;
+                        height: 40vh;
+                        top:5vh;
+                    }
+                }
+            }
         }
     }
 }
